Add a linux c version
Signed-off-by: iotah <writeforever@foxmail.com>

--- a/linux/cpp/Makefile
+++ b/linux/cpp/Makefile
@@ -9,8 +9,8 @@ jpegenc: main.o JPEGENC.o
 main.o: main.cpp
 	$(CXX) $(CFLAGS) -c main.cpp
 
-JPEGENC.o: ../src/JPEGENC.cpp ../src/jpegenc.inl ../src/JPEGENC.h
-	$(CXX) $(CFLAGS) -c ../src/JPEGENC.cpp
+JPEGENC.o: ../../src/JPEGENC.cpp ../../src/jpegenc.inl ../../src/JPEGENC.h
+	$(CXX) $(CFLAGS) -c ../../src/JPEGENC.cpp
 
 clean:
 	rm -rf *.o jpegenc
