--- a/linux/c/Makefile
+++ b/linux/c/Makefile
@@ -1,13 +1,10 @@
-CFLAGS=-D__LINUX__ -Wall -O2 -g
+CFLAGS=-D__LINUX__ -Wall -O2 -I. -g
 LIBS =
 
 all: jpegenc
 
-jpegenc: main.o
-	$(CC) main.o  $(LIBS) -o jpegenc
-
-main.o: main.c
-	$(CC) $(CFLAGS) -c main.c jpegenc.c JPEGENC.h
+jpegenc: main.o jpegenc.o
+	$(CC) $(CFLAGS) $^ $(LIBS) -o $@
 
 clean:
 	rm -rf *.o jpegenc
